        PR libgfortran/19052         * libgfortran.h (options_t): Add stderr_unit.         * io/io.h (error_stream): Declare.         * io/open.c (new_unit): Do not terminate abnormally if opening         file preconnected to stdin, stdout, or stderr.         * io/unit.c (init_units): Initialize stderr_unit.         * io/unix.c (error_stream): New function.         * runtime/environ.c (GFORTRAN_STDERR_UNIT): New environment variable.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@94090 138bc75d-0d04-0410-961f-82ee72b054a4